# molecular-property-prediction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TRAINING_GUIDE.md  app.py  config.yaml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: example_molecules.json
docs/: IMPROVEMENT_GUIDE.md
models/: attentivefp_results.json  ensemble_results.json  gnn_results.json  pretrain_history.json  results.json
scripts/: api.py  batch_predict.py  cli.py  compare_models.py  download_data.py  download_pretrain_data.py  ensemble_all.py  predict.py  pretrain_gnn.py  pretrain_pipeline.py  train.py  train_all.py  train_attentivefp.py  train_gnn.py  train_max_power.py  visualize_results.py
src/: __init__.py  constants.py
src/models/: __init__.py  attentivefp.py  gcn.py  gin.py  mlp.py  mol_transformer.py
src/utils/: __init__.py  active_learning.py  activity_cliffs.py  adversarial_robustness.py  augmentation.py  caching.py  calibration.py  checkpointing.py  chemical_space.py  config.py  config_validator.py  contrastive_learning.py  cross_validation.py  curriculum_learning.py  descriptors.py  drift_detection.py  drug_likeness.py  early_stopping.py  ensemble_optimizer.py  export.py  features.py  federated_learning.py  hyperparameter_optimization.py  interpretability.py  knowledge_distillation.py  logger.py  losses.py  memory_profiler.py  metrics.py  mixed_precision.py  model_registry.py  multitask_learning.py  neural_architecture_search.py  pruning.py  schedulers.py  shap_explainer.py  similarity.py  smiles.py  toxicophores.py  transfer_learning.py  (+2 more)
tests/: __init__.py  conftest.py  test_features.py  test_models.py  test_smiles.py
